test/fixtures/valid-private/resources/private.raml
displayName: private
description:
  # start-private
  Just a private description
  # end-private
/{foo_id}:
  post:
    displayName: private
    responses:
      201:
        body:
          application/json:
            schema: !include ../schemas/foo/item.json
