test/fixtures/invalid/invalid-date-time-example.raml
#%RAML 0.8
---
baseUri: a
title: a
version: a
schemas:
  - foo: !include schemas/foo/object.json
/a:
  displayName: a
  post:
    displayName: a
    responses:
      200:
        body:
          application/json:
            schema: !include schemas/foo/item.json
            example: !include schemas/foo/item.example.json
